# qt6-declarative-os2

./: .cmake.conf  .gitignore  .qmake.conf  .tag  REUSE.toml  dependencies.yaml  licenseRule.json  t
coin/: module_config.yaml
include/QtLabsAnimation/: qtlabsanimationversion.h
include/QtLabsFolderListModel/: qtlabsfolderlistmodelversion.h
include/QtLabsQmlModels/: qtlabsqmlmodelsversion.h
include/QtLabsSettings/: qtlabssettingsversion.h
include/QtLabsSharedImage/: qtlabssharedimageversion.h
include/QtLabsWavefrontMesh/: qtlabswavefrontmeshversion.h
include/QtPacketProtocol/: qtpacketprotocolversion.h
include/QtQml/: headers.pri  qtqmlversion.h
include/QtQmlCompiler/: headers.pri  qtqmlcompilerversion.h
include/QtQmlCore/: headers.pri  qtqmlcoreversion.h
include/QtQmlDebug/: qtqmldebugversion.h
include/QtQmlDom/: headers.pri  qtqmldomversion.h
include/QtQmlIntegration/: headers.pri  qqmlintegration.h  qtqmlintegrationversion.h
include/QtQmlLint/: QtQmlLint  QtQmlLintVersion  headers.pri  qtqmllintversion.h
include/QtQmlLocalStorage/: qtqmllocalstorageversion.h
include/QtQmlModels/: headers.pri  qtqmlmodelsversion.h
include/QtQmlWorkerScript/: qtqmlworkerscriptversion.h
include/QtQmlXmlListModel/: qtqmlxmllistmodelversion.h
include/QtQuick/: headers.pri  qtquickversion.h
include/QtQuickControls2/: headers.pri  qtquickcontrols2version.h
include/QtQuickControls2Impl/: headers.pri  qtquickcontrols2implversion.h
include/QtQuickControlsTestUtils/: qtquickcontrolstestutilsversion.h
include/QtQuickDialogs2/: headers.pri  qtquickdialogs2version.h
include/QtQuickDialogs2QuickImpl/: headers.pri  qtquickdialogs2quickimplversion.h
include/QtQuickDialogs2Utils/: headers.pri  qtquickdialogs2utilsversion.h
include/QtQuickLayouts/: qtquicklayoutsversion.h
include/QtQuickParticles/: qtquickparticlesversion.h
include/QtQuickShapes/: qtquickshapesversion.h
include/QtQuickTemplates2/: headers.pri  qtquicktemplates2version.h
include/QtQuickTest/: qtquicktestversion.h
include/QtQuickTestUtils/: headers.pri  qtquicktestutilsversion.h
include/QtQuickWidgets/: qtquickwidgetsversion.h
src/: REUSE.toml
src/core/: CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt.rej
src/effects/: CMakeLists.txt  CMakeLists.txt.rej  qquickmultieffect.cpp
src/particles/: CMakeLists.txt  CMakeLists.txt.orig  (+14 more)
src/qmlmodels/doc/snippets/delegatemodel/delegatemodel_rootindex/: CMakeLists.txt  delegatemodel_rootindex.pro  main.cpp  view.qml
tests/auto/cmake/test_aotstats_integration/: CMakeLists.txt  main.cpp
tests/auto/cmake/test_aotstats_integration/empty/: CMakeLists.txt
tests/auto/cmake/test_aotstats_integration/no_bindings/: CMakeLists.txt  NoBindings.qml
tests/auto/cmake/test_aotstats_integration/normal/: CMakeLists.txt  Normal.qml
tests/auto/cmake/test_aotstats_integration/only_bytecode/: CMakeLists.txt  Ignored.qml
tests/auto/qml/qmlcppcodegen/data/Confused/: CMakeLists.txt  Main.qml  Main2.qml
tests/auto/qml/qmlcppcodegen/data/Confused/Test/: broken.js  qmldir  test.js
tests/auto/qml/qmlcppcodegen/data/WithSubDir/: CMakeLists.txt
tests/auto/qml/qmlcppcodegen/data/WithSubDir/qml/: GreenRect.qml  MyScript.js
(+862 files in other folders)
